--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bluebird": "^3.5.36",
     "bluebird": "^3.7.2",
     "typescript": "^4.6.4"
   },
